# REACT_QML

./: .coverage  .gitignore  .gitmodules  7.2-EXE-variational-autoencoder.ipynb  =2.1  README.md  conftest.py  dependencies.toml  new_requirements.txt  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
QM9/: GraphVAE  GraphVAE.py
VAE/: train.py  (+3 more)
ptseries/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  setup.cfg
ptseries/ptseries/: __init__.py
ptseries/ptseries/algorithms/: README.md
ptseries/ptseries/algorithms/binary_solvers/: __init__.py  binary_bosonic_solver.py
ptseries/ptseries/algorithms/binary_solvers/models/: flip_model_non_qubo.py  flip_model_qubo.py
ptseries/ptseries/algorithms/classifiers/: __init__.py  general_classifier.py  utils.py
ptseries/ptseries/algorithms/gans/: __init__.py  gan.py  utils.py
ptseries/ptseries/common/: logger.py  set_seed.py
ptseries/ptseries/models/: README.md  __init__.py  observables.py  pt_generator.py  pt_layer.py  utils.py
ptseries/ptseries/models/pt_generator_training/: observables_torch.py  unitary_torch.py
ptseries/ptseries/optimizers/: __init__.py  hybrid_optimizer.py  spsa_optimizer.py
ptseries/ptseries/tbi/: README.md  __init__.py  fixed_random_unitary.py  pt1.py  tbi.py  tbi_abstract.py  tbi_multi_loop.py  tbi_single_loop.py
ptseries/ptseries/tbi/boson_sampler/: boson_sampler.py  distinguishable_sampler.py  permanent_functions.py  source_statistics.py  utils.py
ptseries/ptseries/tbi/representation/: representation.py
ptseries/tests/: references.py  test_PT1.py  test_SDK.py
ptseries/tutorial_notebooks/: PT1_demo.ipynb  getting_started.ipynb  mnist_generation.ipynb  optimisation_intro.ipynb  ptseries_simulation.ipynb  quantum_variational_classification.ipynb
ptseries/tutorial_notebooks/optimisation_notebooks/: QUBO_&_max_cut.ipynb  route_optimisation.ipynb  workshop_optimisation.ipynb
ptseries/tutorial_notebooks/utils/: max_cut_utils.py  mnist_models.py  mnist_utils.py
(+620 files in other folders)
