[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptseries"
version = "0.1.0"
description = "PT Series Software Development Kit"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
dependencies = []

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::UserWarning"]
