[metadata]
name = ptseries
version = 2.7.0
description = ORCA SDK for running machine learning algorithms on a PT Series device
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
keywords = Quantum, Machine Learning, Boson Sampling, Physics
author = ORCA Computing
author_email = hello@orcacomputing.com
long_description = file: README.md

[options]
install_requires =
	jupyter
	matplotlib
	networkx
	numba
	numpy
	requests
	scipy
	sympy
	torch
	torchvision
python_requires = >3.10
packages = find:

[options.extras_require]
tests = pytest
format =
	pre-commit
	ruff
